# rmoji

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.md
.github/workflows/: ci.yml
rmoji/: cli.py  constants.py  emoji.py  files.py  scanner.py
tests/: test_cli.py  test_emoji.py  test_files.py  test_scanner.py
tests/testdata/: file1.txt  file2.txt  file3.txt  file4.txt
