[project]
name = "rmoji"
version = "0.1.0"
description = "Remove emojis from files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "iterfzf>=1.8.0.62.0",
    "rich>=14.0.0",
    "ripgrepy>=2.1.0",
    "typer>=0.16.0",
]


[project.scripts]
rmoji = "rmoji.cli:app"
