[project]
name = "rmoji"
version = "0.3.0"
description = "Remove emojis from files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "iterfzf>=1.8.0.62.0",
    "pathspec>=0.12.1",
    "rich>=14.0.0",
    "ripgrepy>=2.1.0",
    "typer>=0.16.0",
]


[project.scripts]
rmoji = "rmoji.cli:app"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "deptry>=0.24.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]



[tool.ruff]
line-length = 120
exclude = ["pyproject.toml"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "D",      # docstring conventions
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib

    "C90",    # McCabe complexity (C901)
    "PL",     # pylint (PLR, PLC, PLE, etc.)

    "N",      # pep8-naming
    "RET",    # flake8-return (early returns)
    "TRY",    # tryceratops (exception hygiene)
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "ERA",    # eradicate (commented-out code)
    "T20",    # flake8-print
]
ignore = ["D100", "D400", "D104","D200","D401","D205","B008","PLC0415"]  # optional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
untyped_calls_exclude = ["typer"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["rmoji"]


[tool.pytest.ini_options]
testpaths = ["tests"]
